@@ -8027,11 +8027,14 @@ If $r$ is not \kbd{NULL} set it to $T(1)$.
 \fun{GEN}{ZX_gcd}{GEN x,GEN y} returns a gcd of the \kbd{ZX} $x$ and $y$.
 Not memory-clean, but suitable for \kbd{gerepileupto}.
 
-\fun{GEN}{ZX_gcd_all}{GEN x, GEN y, GEN *pX}. returns a gcd $d$ of $x$ and
+\fun{GEN}{ZX_gcd_all}{GEN x, GEN y, GEN *pX} returns a gcd $d$ of $x$ and
 $y$. If \kbd{pX} is not \kbd{NULL}, set $\kbd{*pX}$ to a (non-zero) integer
 multiple of $x/d$. If $x$ and $y$ are both monic, then $d$ is monic and
 \kbd{*pX} is exactly $x/d$. Not memory clean if the gcd is $1$
 (in that case \kbd{*pX} is set to $x$).
+
+\fun{GEN}{ZX_radical}{GEN x} returns the largest squarefree divisor
+of the \kbd{ZX} $x$. Not memory clean.
 
 \fun{GEN}{ZX_content}{GEN x} returns the content of the \kbd{ZX} $x$.
 
